--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,15 +6,24 @@
     <TextView
         android:id="@+id/textoUbicacion"
         android:text="Hello World"
+        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         />
+    <ImageView
+        android:layout_height="300dp"
+        android:layout_width="200dp"
+        android:visibility="visible"
+        android:id="@+id/imageView1"
+        android:layout_weight="3"/>
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="mx.peta.hellomap.MapsActivity" />
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        tools:context="mx.peta.hellomap.MapsActivity"
+        android:layout_weight="2"/>
 </LinearLayout>
