--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,9 +11,17 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
+
+    <Button
+        android:text="fin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnFin"
+        android:layout_weight="1" />
+
     <ImageView
-        android:layout_height="300dp"
-        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_width="150dp"
         android:visibility="visible"
         android:id="@+id/imageView1"
         android:layout_weight="3"/>
